--- a/app/web/views/typography.html
+++ b/app/web/views/typography.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flor Barrau Fotografía</title>
     <link rel="shortcut icon" type="image/png" href="/img/favicon.ico" />
-    <meta name="theme-color" content="rgb(222, 215, 109)">
+    <meta name="theme-color" content="rgb(245, 190, 126)">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/lib/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -29,7 +29,7 @@
                         <p>Podes agregar un texto personalizado y seleccionar la tipografía o incluir un codigo QR para que aparezca en el pie de tus fotos.</p>
                         <p><b>El precio expresado es por pedido y no por foto 😉</b></p>
                         <div class="center-align">
-                            <img src="/img/typography_sample2.jpg" class="sample-image-horizontal">
+                            <img src="/img/typography_sample3.png" class="sample-image-horizontal">
                         </div>
                         <h6>Seleccioná la tipografía o código QR <span class="required">*</span></h6>
                         <div class="row">
