fix shipping detail message

--- a/app/web/views/detail.html
+++ b/app/web/views/detail.html
@@ -61,15 +61,12 @@
                             <div class="card-content padding-top-10 padding-bottom-10">
                                 <p><b>IMPORTANTE</b></p>
                                 <p>
-                                    Debido a las medidas de aislamiento tomadas a causa del reciente brote de COVID-19 nos 
-                                    vimos obligados de realizar las entregas en la modalidad de envíos a domicilio a través de
-                                    distintos medios de transporte, dependiendo las distancias.<br>Te sugerimos consultes el 
-                                    apartado con información del precio de nuestros envíos que te facilitamos a continuación.
+                                    El precio especificado no incluye el envío a domicilio en el caso que selecciones dicha opción, consultanos en nuestras redes sociales por las tarifas y como abonarlo.
                                 </p>
                                 <br>
-                                <p class="center-align">
+                                <!-- <p class="center-align">
                                     <a class="waves-effect waves-light-3 grey lighten-3 black-text btn modal-trigger" href="#alert-modal">Información de Envíos</a>
-                                </p>
+                                </p> -->
                             </div>
                         </div>
                         <div class="row">
