fix shipping detail message

--- a/app/web/views/detail.html
+++ b/app/web/views/detail.html
@@ -61,7 +61,7 @@
                             <div class="card-content padding-top-10 padding-bottom-10">
                                 <p><b>IMPORTANTE</b></p>
                                 <p>
-                                    El precio especificado no incluye el envío a domicilio en el caso que selecciones dicha opción, consultanos en nuestras redes sociales por las tarifas y como abonarlo.
+                                    El precio especificado NO incluye el envío a domicilio en el caso que selecciones dicha opción, consultanos en nuestras redes sociales por las tarifas y como abonarlo.
                                 </p>
                                 <br>
                                 <!-- <p class="center-align">
