--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -4,7 +4,7 @@
     --color-primary: #4d2f6b;
     --color-primary-light: #4d2f6b;
     --color-primary-accent: #9770af;
-    --color-primary-grey: #f1efc0;
+    --color-primary-grey: #d4c0f1;
 }
 
 /* :root {
