--- a/app/web/views/detail.html
+++ b/app/web/views/detail.html
@@ -58,7 +58,7 @@
                         <h5 class="center-align">Total $<%= getPrice(order) %></h5>
                         <br>
                         <div class="card card-alert">
-                            <div class="card-content padding-top-10 padding-bottom-10">
+                            <div class="card-content padding-top-10 padding-bottom-10 white-text">
                                 <p><b>IMPORTANTE</b></p>
                                 <p>
                                     El precio especificado NO incluye el envío a domicilio en el caso que selecciones dicha opción, consultanos en nuestras redes sociales por las tarifas y como abonarlo.
@@ -163,7 +163,7 @@
                             </div>                            
                         </div>
                         <div class="card card-alert">
-                            <div class="card-content padding-top-10 padding-bottom-10 center-align">
+                            <div class="card-content padding-top-10 padding-bottom-10 center-align white-text">
                                 <b>Recordá abonar en efectivo el precio del envío al personal de mensajería.</b>
                             </div>
                         </div>
